# mcp-ai-therapy

./: .env.example  .gitignore  LICENSE  README.md  example-therapy-session.md  example_therapy_session.md  go.mod  go.sum  main.go
claude-config/: claude_desktop_config.json  claude_desktop_config_template.json
clients/: claude.go  ollama.go
config/: config.go
conversation/: manager.go
docs/: README.md  automated-scheduling.md  quick-start.md
docs/architecture/: data-models.md  overview.md
docs/concepts/: conversation-management.md  memory-and-embeddings.md  resilience-and-error-handling.md
docs/future-improvements/: long-term.md  short-term.md
docs/glossary/: files-and-methods.md
docs/mcp-integration/: claude-usage-guide.md
mcp-server/: README.md  pyproject.toml  requirements.txt  test_mcp_server.py  test_setup.py
mcp-server/src/: main.py
mcp-server/src/ai_therapy_mcp/: __init__.py  memory_reader.py  models.py  server.py  tools.py
memory/: bank.go  embeddings.go  models.go  storage.go
models/: message.go
scripts/: schedule-therapy.sh  validate-setup.sh
utils/: retry.go
