[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-therapy-mcp"
version = "0.1.0"
description = "MCP Server for Claude's Therapeutic Memory and Emotional Intelligence"
authors = [
    {name = "AI Therapy Project", email = "therapy@ai-project.dev"}
]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["mcp", "claude", "therapy", "ai", "emotional-intelligence", "memory"]

dependencies = [
    "mcp>=1.0.0",
    "openai>=1.0.0", 
    "numpy>=1.24.0",
    "python-dateutil>=2.8.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/dion-hagan/mcp-ai-therapy"
Repository = "https://github.com/dion-hagan/mcp-ai-therapy"
Issues = "https://github.com/dion-hagan/mcp-ai-therapy/issues"

[project.scripts]
ai-therapy-mcp = "ai_therapy_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
